hello/_build/_log
### Starting build.
# Target: hello_.ml.depends, tags: { extension:ml, file:hello_.ml, ocaml, ocamldep, quiet }
/home/akiel/.opam/default/bin/ocamldep.opt -modules hello_.ml > hello_.ml.depends
# Target: hello_.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:hello_.cmo, file:hello_.ml, implem, ocaml, quiet }
/home/akiel/.opam/default/bin/ocamlc.opt -c -o hello_.cmo hello_.ml
+ /home/akiel/.opam/default/bin/ocamlc.opt -c -o hello_.cmo hello_.ml
File "hello_.ml", line 1, characters 6-10:
1 | open! Core
          ^^^^
Error: Unbound module Core
Command exited with code 2.
# Compilation unsuccessful.
